[metadata]
name = mapio_gpio_ha
version = file: src/mapio_gpio_ha/VERSION
author = Pierrick Curt
author_email = pierrickcurt@gmail.com
description = MAPIO GPIO HA source code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pcurt/mapio_gpio_ha
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: Other/Proprietary License

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    Click == 8.1.3
    gpiod == 1.5.3

zip_safe = False
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mapio_gpio_ha = mapio_gpio_ha.cli:main

[bumpversion]
# No configuration here, the settings are stored in .bumpversion.cfg,
# otherwise all the comments of setup.cfg get deleted whenever bumpversion runs
# See this issue: https://github.com/c4urself/bump2version/issues/37

[flake8]
exclude = docs
max-line-length = 100
# Ignore import warnings in __init__ files
per-file-ignores = __init__.py:F401
extend-ignore = E203

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_untyped_calls = True
ignore_missing_imports = False

[isort]
profile = black

[coverage:run]
branch = True
source = mapio_gpio_ha
parallel = True

[coverage:paths]
source =
    src/
    .tox/**/site-packages